--- a/templates/kitchen/ingredient_list.html
+++ b/templates/kitchen/ingredient_list.html
@@ -27,7 +27,7 @@
                         {% for ingredient in ingredient_list %}
                         <tr>
                           <th scope="row">{{ ingredient.id }}</th>
-                          <th scope="row">{{ ingredient.name }}</th>
+                          <th scope="row"><a href="{% url "kitchen:ingredient-detail" pk=ingredient.id %}">{{ ingredient.name }}</a></th>
                           <th scope="row">Explore dishes with this ingredient</th>
                           <th scope="row">Update ingredient</th>
                         </tr>
