--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -3,11 +3,7 @@
 <div class="container">
   <header class="header-global">
 
-      {% if request.path == "/landing-freelancer/" or request.path == "/blank/" %}
       <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-light navbar-theme-secondary">
-      {% else %}
-      <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-dark navbar-theme-secondary">
-      {% endif %}
         <div class="container position-fluid">
             <a class="navbar-brand me-lg-5" href="/">
                 <img class="navbar-brand-dark" src="{% static 'assets/img/brand/light.svg' %}" alt="Logo light">
@@ -38,28 +34,21 @@
                                     <h6 class="d-block mb-3 text-primary">Main pages</h6>
                                     <ul class="list-style-none mb-4">
                                         <li class="mb-2 megamenu-item">
-                                            <a class="megamenu-link" href="{% url 'about_us' %}">Dish categories</a>
+                                            <a class="megamenu-link" href="{% url 'kitchen:dish-type-list' %}">All dish types</a>
                                         </li>
                                         <li class="mb-2 megamenu-item">
-                                            <a class="megamenu-link" href="{% url 'contact_us' %}">Dishes</a>
+                                            <a class="megamenu-link" href="{% url 'kitchen:dish-list' %}">All dishes</a>
                                         </li>
                                         <li class="mb-2 megamenu-item">
-                                            <a class="megamenu-link" href="{% url 'contact_us' %}">Ingredients</a>
+                                            <a class="megamenu-link" href="{% url 'kitchen:ingredient-list' %}">All ingredients</a>
                                         </li>
                                         <li class="mb-2 megamenu-item">
-                                            <a class="megamenu-link" href="{% url 'contact_us' %}">Cooks</a>
+                                            <a class="megamenu-link" href="{% url 'kitchen:cook-list' %}">All cooks</a>
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="col-6 col-lg-4">
-                                    <h6 class="d-block mb-3 text-primary">Landings</h6>
-                                    <ul class="list-style-none mb-4">
-                                        <li class="mb-2 megamenu-item">
-                                            <a class="megamenu-link" href="{% url 'landing_freelancer' %}">Freelancer</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-6 col-lg-4">
+
+                                <div class="col-4 col-lg-4">
                                     <h6 class="d-block mb-3 text-primary">User</h6>
                                     <ul class="list-style-none mb-4">
                                       {% if request.user.is_authenticated %}
@@ -82,22 +71,18 @@
                             </div>
                         </div>
                     </li>
-
-
                 </ul>
             </div>
             <div class="d-flex align-items-center">
               {% if request.user.is_authenticated %}
-                  <a href="{% url 'logout' %}"
-                     class="btn btn-outline-gray-100 d-none d-lg-inline me-md-3"><span class="fas fa-sign-out-alt me-2"></span> Logout</a>
+                <a href="{% url 'kitchen:cook-detail' pk=user.id %}"
+                     class="btn btn-dark d-none d-lg-inline me-md-3"> User: {{ user.username }}</a>
+                <a href="{% url 'logout' %}"
+                     class="btn btn-outline-gray d-none d-lg-inline me-md-3"><span class="fas fa-sign-out-alt me-2"></span> Logout</a>
               {% else %}
                   <a href="{% url 'login' %}"
-                      class="btn btn-outline-gray-100 d-none d-lg-inline me-md-3"><span class="fas fa-sign-in-alt me-2"></span> Sign IN</a>
+                      class="btn btn-outline-gray d-none d-lg-inline me-md-3"><span class="fas fa-sign-in-alt me-2"></span> Sign IN</a>
               {% endif %}
-                <a target="_blank" href="https://appseed.us/product/pixel-bootstrap/django/" class="btn btn-tertiary"><i class="fas fa-cloud-download-alt me-2"></i> Download</a>
-                <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
         </div>
     </nav>
