--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -32,7 +32,7 @@
                           <th scope="row"><a href="{% url "kitchen:dish-detail" pk=dish.id %}">{{ dish.name }}</a></th>
                           <th scope="row">{{ dish.price }}</th>
                           <th scope="row">ingredients</th>
-                          <th scope="row">{{ dish.dish_type.name }}</th>
+                          <th scope="row">{{ dish.dishtype.name }}</th>
                           <th scope="row">cooks</th>
                           <th scope="row">Update dish type</th>
                         </tr>
