--- a/templates/kitchen/dishtype_form.html
+++ b/templates/kitchen/dishtype_form.html
@@ -11,7 +11,7 @@
             <div class="signin-inner my-4 my-lg-0 bg-white shadow-soft border rounded border-gray-300 p-4 p-lg-5 w-100 fmxw-900">
                     <div class="card-body px-5 py-5 text-center text-md-left">
                         <div class="row align-items-center">
-                          <h1>{{ object|yesno:"Update,Create" }} dish</h1>
+                          <h1>{{ object|yesno:"Update,Create" }} dish type</h1>
                           <form action="" method="post" class="mt-4" novalidate>
                             {% csrf_token %}
                             {% for field in form %}
