--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -39,10 +39,14 @@
                         {% endfor %}
                   {% else %}
                     <h6>There are no cooks yet.</h6>
-                    <br>
-                    <h6>Click here add</h6>
                   {% endif %}
                     </table>
+                  <div>
+                    <br>
+                    <a href="{% url "kitchen:cook-create" %}" class="btn btn-tertiary">
+                      Click here to add
+                    </a>
+                  </div>
                 </div>
             </div>
         </div>
