--- a/templates/kitchen/dishtype_list.html
+++ b/templates/kitchen/dishtype_list.html
@@ -33,10 +33,14 @@
                         {% endfor %}
                   {% else %}
                     <h6>There are no dish types yet.</h6>
-                    <br>
-                    <h6>Click here add one</h6>
                   {% endif %}
                     </table>
+                  <div>
+                    <br>
+                    <a href="{% url "kitchen:dish-type-create" %}" class="btn btn-tertiary">
+                      Click here to add
+                    </a>
+                  </div>
                 </div>
             </div>
         </div>
