--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -39,10 +39,10 @@
                                 {% endif %}
                             </div>
                             <div class="col-12 col-md-6 mt-4 mt-md-0 text-md-right">
-                                <a href="#" class="btn btn-success">
+                                <a href="{% url "kitchen:dish-update" pk=dish.id %}" class="btn btn-success">
                                     Update
                                 </a>
-                                <a href="#" class="btn btn-danger">
+                                <a href="{% url "kitchen:dish-delete" pk=dish.id %}" class="btn btn-danger">
                                     Delete
                                 </a>
                             </div>
