--- a/templates/kitchen/ingredient_detail.html
+++ b/templates/kitchen/ingredient_detail.html
@@ -25,10 +25,10 @@
                                 {% endfor %}
                             </div>
                             <div class="col-12 col-md-6 mt-4 mt-md-0 text-md-right">
-                                <a href="#" class="btn btn-success">
+                                <a href="{% url "kitchen:ingredient-update" pk=ingredient.id %}" class="btn btn-success">
                                     Update
                                 </a>
-                                <a href="#" class="btn btn-danger">
+                                <a href="{% url "kitchen:ingredient-delete" pk=ingredient.id %}" class="btn btn-danger">
                                     Delete
                                 </a>
                             </div>
