--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -16,6 +16,10 @@
                         <span class="h5">Dishes</span>
                     </div>
                   {% if dish_list %}
+                    <form action="" method="get" class="d-lg-inline-flex">
+                      {{ search_form }}
+                    <input type="submit" value="Search 🔍" class="mx-1 btn btn-secondary">
+                    </form>
                     <table class="table table-hover">
                         <tr>
                             <th scope="col" id="class3">ID</th>
