--- a/templates/kitchen/ingredient_list.html
+++ b/templates/kitchen/ingredient_list.html
@@ -17,6 +17,10 @@
                         <span class="h5">Ingredients</span>
                     </div>
                   {% if ingredient_list %}
+                    <form action="" method="get" class="d-lg-inline-flex">
+                      {{ search_form }}
+                    <input type="submit" value="Search 🔍" class="mx-1 btn btn-secondary">
+                    </form>
                     <table class="table table-hover">
                         <tr>
                             <th scope="col">ID</th>
