add currency to prices on dish list page

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -24,7 +24,7 @@
                         <tr>
                             <th scope="col" id="class3">ID</th>
                             <th scope="col" id="teacher3">Name</th>
-                            <th scope="col" id="males3">Price</th>
+                            <th scope="col" id="males3">Price, EUR</th>
                             <th scope="col" id="males3">Dish type</th>
                         </tr>
                         {% for dish in dish_list %}
